Refactor SecurityConfig for CORS and authorization
Refactor SecurityConfig to improve CORS configuration and authorization rules.